# SysrepoProgect

./: main.cpp  meson.build  model.yang  module.yang  test
MobileClient/: meson.build
MobileClient/api/: INetConfAgent.hpp
MobileClient/hpp/: GeneratePath.hpp  MobileClient.hpp  MobileService.hpp  NetConfAgent.hpp
MobileClient/sourse/: GeneratePath.cpp  MobileClient.cpp  MobileService.cpp  NetConfAgent.cpp
Tests/: meson.build
Tests/mock/: NetConfAgentMock.hpp
Tests/sourse/: MobileClientTests.cpp
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-targets.json  meson-info.json
builddir/meson-logs/: meson-log.txt
builddire/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  demo
builddire/MobileClient/eaac78d@@sourse_lib@sha/: libsourse_lib.so.symbols
builddire/Tests/: demo_test
builddire/meson-info/: intro-buildsystem_files.json  intro-dependencies.json  intro-targets.json  intro-tests.json  meson-info.json
builddire/meson-logs/: meson-log.txt  testlog.json  testlog.txt
